# tidymark

./: .gitattributes  .gitignore  .golangci.yml  .mdsmith.pinned.yml  .mdsmith.yml  .tidymark.yml  AGENTS-PR-FIXUP.md  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  PLAN.md  README.md  SECURITY.md  codecov.yml  debug_tb.go  demo.tape  e2e_test.go  go.mod  go.sum  main.go  mergedriver.go  metrics.go  ruledocs.go  ruledocs_test.go  rules
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/: pr-fixup.md  proto.md
.github/: AGENTS-PR-FIXUP.md  CODEOWNERS  copilot-instructions.md  copilot-pr-fixup.md  dependabot.yml
.github/instructions/: code-review.instructions.md
.github/scripts/: check-secret-rotations.py  check-secret-rotations.test.ts  check-secret-rotations.ts  package.json  record-rotation.py  record-rotation.test.ts  record-rotation.ts  tsconfig.json
.github/workflows/: benchmark.yml  ci.yml  demo.yml  merge-queue.yml  pages.yml  record-demo.yml  record-secret-rotation.yml  release.yml  secret-rotation-reminder.yml
archetypes/: README.md
archetypes/generated-section/: README.md
assets/benchmarks/: headline.fragment.md  results.fragment.md
background/: markdown-linters.md
cmd/corpusctl/: main.go  main_test.go  measure.go  measure_test.go
cmd/mdsmith/: archetypes.go  archetypes_e2e_test.go  archetypes_removal_test.go  archetypes_unit_test.go  backlinks.go  backlinks_unit_test.go  configenable.go  deps.go  deps_unit_test.go  discover.go  discover_test.go  e2e_archetypes_test.go  e2e_backlinks_test.go  e2e_coverage_test.go  e2e_fix_dryrun_test.go  e2e_profiling_test.go  e2e_query_test.go  e2e_symlink_default_deny_test.go  e2e_test.go  explain.go  explain_e2e_test.go  explain_unit_test.go  export.go  export_unit_test.go  extract.go  extract_fault_test.go  extract_unit_test.go  kinds.go  kinds_e2e_test.go  kinds_schema_test.go  kinds_unit_test.go  list.go  list_e2e_test.go  lsp.go  lsp_hover_test.go  lsp_navigation_test.go  lsp_test.go  lsp_unit_test.go  main.go  main_unit_test.go  (+13 more)
cmd/mdsmith-release/: covmerge.go  covmerge_test.go  main.go  main_test.go  publishrelease.go  publishrelease_test.go  sbom.go  sbom_test.go
cmd/tidymark/: main.go  (+1 more)
demo/: sample.md
guides/: metrics-tradeoffs.md
plan/: 100_build-config-and-mds040.md  101_build-directive-mds039.md  102_build-subcommand.md  103_build-staleness-and-deps.md  104_build-lifecycle-hooks.md  105_no-inline-html.md  106_emphasis-style.md  107_no-reference-style.md  108_horizontal-rule-style.md  109_list-marker-style.md  110_ordered-list-numbering.md  111_ambiguous-emphasis.md  112_flavor-profiles.md  113_user-defined-profiles.md  114_mds034-message-and-flavor-vs-rule-docs.md  116_build-execution-ux.md  117_build-execution-hardening.md  120_glob-unification.md  121_vscode-integration.md  121_yaml-handling-review.md  122_vscode-hover-and-palette.md  122_vscode-hover-codelens.md  123_vscode-tree-views.md  124_no-space-in-code-spans.md  124_vscode-command-palette.md  126_proper-names.md  127_single-h1.md  128_no-undefined-reference-labels.md  129_no-unused-link-definitions.md  12_generated-section.md  130_binary-distribution-and-versioning.md  131_lsp-symbol-navigation.md  132_claude-code-plugin.md  132_mcp-claude-code-plugin.md  133_actionable-schema-diagnostics.md  133_lsp-hover.md  134_lsp-completion.md  134_named-field-type-shortcuts.md  135_schema-extends.md  136_field-deprecation-flag.md  (+150 more)
python/: pyproject.toml
rules/: proto.md
scripts/: build-wheels.sh  check-versions.sh  set-version.sh
website/: .gitignore  README.md  build-output.mdsmith.yml  hugo.toml
(+1486 files in other folders)
