[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdsmith"
version = "0.0.0-dev"
description = "Fast, auto-fixing Markdown linter and formatter for docs, READMEs, and AI-generated content."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["markdown", "linter", "formatter", "mdsmith", "docs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Go",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
mdsmith = "mdsmith.__main__:main"

[project.urls]
Homepage = "https://github.com/jeduden/mdsmith"
Source = "https://github.com/jeduden/mdsmith"
Issues = "https://github.com/jeduden/mdsmith/issues"

[tool.hatch.build.targets.wheel]
packages = ["mdsmith"]
# cmd/mdsmith-release build-wheels stages the prebuilt binary at
# mdsmith/_bin/mdsmith[.exe] before invoking `python -m build`.
# Hatchling otherwise drops the staged file because it isn't
# checked in; force-include adds the whole `_bin/` tree to every
# wheel.
artifacts = [
  "mdsmith/_bin/mdsmith",
  "mdsmith/_bin/mdsmith.exe",
]

[tool.hatch.build.targets.wheel.force-include]
"mdsmith/_bin" = "mdsmith/_bin"
